<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F1F1F"
    tools:context=".AddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/addNewTireImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_new_tire_logo"
            app:srcCompat="@drawable/addnewtire" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="2dp"
            android:background="#FFFFFF"
            android:padding="0dp">

            <Spinner
                android:id="@+id/brands_dropdown"
                style="@style/Widget.AppCompat.DropDownItem.Spinner"
                android:layout_width="match_parent"
                android:layout_height="48dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="2dp"
            android:background="#FFFFFF"
            android:padding="0dp">

            <Spinner
                android:id="@+id/models_dropdown"
                style="@style/Widget.AppCompat.DropDownItem.Spinner"
                android:layout_width="match_parent"
                android:layout_height="48dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/part_number"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:ems="10"
                android:inputType="text"
                android:padding="10dp"
                android:text="@string/part_number"
                android:textColor="#A8A8A8" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/width"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:ems="10"
                android:inputType="text"
                android:padding="10dp"
                android:text="@string/width"
                android:textColor="#A8A8A8" />

            <EditText
                android:id="@+id/construction"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:ems="10"
                android:inputType="text"
                android:padding="10dp"
                android:text="@string/construction"
                android:textColor="#A8A8A8" />

            <EditText
                android:id="@+id/wheel_diameter"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:ems="10"
                android:inputType="text"
                android:padding="10dp"
                android:text="@string/wheel_diameter"
                android:textColor="#A8A8A8" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/max_load"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:ems="10"
                android:inputType="text"
                android:padding="10dp"
                android:text="@string/max_load"
                android:textColor="#A8A8A8" />

            <EditText
                android:id="@+id/max_psi"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:ems="10"
                android:inputType="text"
                android:padding="10dp"
                android:text="@string/max_psi"
                android:textColor="#A8A8A8" />

            <EditText
                android:id="@+id/ply"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:ems="10"
                android:inputType="text"
                android:padding="10dp"
                android:text="@string/ply"
                android:textColor="#A8A8A8" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/load_rating"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:ems="10"
                android:inputType="text"
                android:padding="10dp"
                android:text="@string/load_rating"
                android:textColor="#A8A8A8" />

            <EditText
                android:id="@+id/speed_rating"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:ems="10"
                android:inputType="text"
                android:padding="10dp"
                android:text="@string/speed_rating"
                android:textColor="#A8A8A8" />

            <EditText
                android:id="@+id/weight"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:ems="10"
                android:inputType="text"
                android:padding="10dp"
                android:text="@string/weight"
                android:textColor="#A8A8A8" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/cost"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:ems="10"
                android:inputType="text"
                android:padding="10dp"
                android:text="@string/cost"
                android:textColor="#A8A8A8" />

            <EditText
                android:id="@+id/sales_price"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:ems="10"
                android:inputType="text"
                android:padding="10dp"
                android:text="@string/sales_price"
                android:textColor="#A8A8A8" />

            <EditText
                android:id="@+id/qty_per_unit"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:ems="10"
                android:inputType="text"
                android:padding="10dp"
                android:text="@string/qty_per_unit"
                android:textColor="#A8A8A8" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/has_warranty"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/has_warranty"
                android:textColor="#FFFFFFFF"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/dot_approved"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/dot_approved"
                android:textColor="#FFFFFFFF"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/is_discontinued"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/is_discontinued"
                android:textColor="#FFFFFFFF"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/upload_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="#4E4E4E"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/upload_image"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="#4E4E4E"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/add_to_database"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>